guestbook-go/guestbook-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: guestbook
  labels:
    app: guestbook
spec:
  replicas: 3
  selector:
    matchLabels:
      app: guestbook
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
      - name: guestbook
        image: k8s.gcr.io/guestbook:v3
        ports:
        - name: http-server
          containerPort: 3000
