guestbook-go/redis-master-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redis-master
  labels:
    app: redis
    role: master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
      role: master
  template:
    metadata:
      labels:
        app: redis
        role: master
    spec:
      containers:
      - name: redis-master
        image: redis
        volumeMounts:
          - mountPath: /data
            name: data-volume
        ports:
        - name: redis-server
          containerPort: 6379
      volumes:
        - name: data-volume
          emptyDir: {}
