guestbook-go/redis-slave-deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: redis-slave
  labels:
    app: redis
    role: slave
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redis
      role: slave
  template:
    metadata:
      labels:
        app: redis
        role: slave
    spec:
      containers:
      - name: redis-slave
        image: redis
        command: ["redis-server"]
        args: ["--slaveof", "redis-master", "6379"]
        volumeMounts:
          - mountPath: /data
            name: data-volume
        ports:
        - name: redis-server
          containerPort: 6379
      volumes:
        - name: data-volume
          emptyDir: {}
