guestbook-go/guestbook-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: guestbook
spec:
  to:
    kind: Service
    name: guestbook
